CKEDITOR-443: Propose macros located in not yet installed extensions in the WYSIWYG * use more generic classes * protect the install service against CSRF attacks * move all the namespace choice logic to the install service * fix line too long

--- a/application-ckeditor-plugins/src/main/resources/xwiki-macro/macroWizard.css
+++ b/application-ckeditor-plugins/src/main/resources/xwiki-macro/macroWizard.css
@@ -34,7 +34,7 @@ ul.macro-parameters .macro-parameter-name {
 }
 
 ul.macro-list .macro-description,
-ul.macro-list .macro-notinstalled-extension,
+ul.macro-list .macro-extension,
 .macro-editor .macro-description,
 ul.macro-parameters .macro-parameter-description,
 ul.macro-parameters > li.more,
@@ -46,7 +46,7 @@ ul.macro-parameter-group-members > li.more {
 }
 
 
-ul.macro-list .macro-notinstalled-extension {
+ul.macro-list .macro-extension {
   margin-right: 1em;
 }
 
